# uv-template

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/uv_template/: __init__.py  cli.py
tests/: test_cli.py
{{cookiecutter.pypi_package_name}}/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
{{cookiecutter.pypi_package_name}}/src/{{cookiecutter.pypi_package_name}}/: __init__.py
